<?xml version="1.0" encoding="utf-8"?>

<!--Shaminda_Abeysekara_301056885 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_Red">

    <Button
        android:id="@+id/shamindaRunTimeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permission" />

    <ImageView
        android:id="@+id/shamindaAnimateImg"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/animationImg" />

    <Button
        android:id="@+id/shamindaAnimateBtn"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Animate" />

    <Button
        android:id="@+id/shamindaStopBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="237dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Stop" />


</RelativeLayout>